[package]
name = "my-csv-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde = "1.0.216"
serde_derive = "1.0.216"
anyhow = "1.0.94"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
futures-util = "0.3.31"
common_macros = "0.1.1"
csv-async = "1.3.0"